--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Lobotomy Youtube",
+  "name": "Lobotomy YouTube",
   "description": "Let's all love lobotomy",
   "version": "1.0",
   "icons": {
